--- a/index.css
+++ b/index.css
@@ -1,43 +1,125 @@
-body{
-
-    width: 80%;
+.imagecenter{
+    position: absolute;
     text-align: center;
+    top: -9999px;
+    bottom: -9999px;
+    left: -9999px;
+    right: -9999px;
     margin: auto;
 }
 
-html{
+/* Base content */
+:root{
     
   background-color: #1D7F56; /* For browsers that do not support gradients */
   background-image: linear-gradient(to right, #146640, #1D7F56, #146640); /* Standard syntax (must be last) */
 }
+body{
+    max-width: 1200px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+h1, h2, h3, h4, h5, h6, p, ul, li, label, div, input,
+.formule{
+  color: white;
+}
+
+
+/* Titre */
 h1{
-    color:white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 0px;
 }
-
 .soustitre{
-    color: white;
     margin-top: 0px;
 }
-
-td{
-    text-align:center;
-}
-.colonnetable{
-    text-align: center;
-    width: 80%;
-    margin: auto;
+.titredesclasses{
+    font-size: 24pt;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-.classeSelect{
+
+
+/*########################*/
+/*#    Content Element   #*/
+/*########################*/
+ul{
+  font-size: 14pt;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+p, label{
+  font-size: 14pt;
+}
+.cadredesclasses{
     border: 5px solid white;
     border-radius: 20px;
     text-align: center;
     box-shadow: 0px 0px 10px white,  0px 0px 10px white inset;
 }
+div{
+  display: inline-block;
+}
+.labelrouge{
+    color: #FF5555;
+}
 
+/*    Table   */
+table{
+  text-align: center;
+  width: auto;
+  margin: auto;
+  border-collapse: collapse;
+}
+td{
+  text-align:center;
+  border-style: solid;
+  border-color: white;
+  padding: 15px;
+}
+.colonnetable{
+  text-align: center;
+  width: 80%;
+  margin: auto;
+}
+.tdrouge{
+  border-color: #FF5555;
+  border-style: none;
+}
+.tdrouge2{
+  border-color: #FF5555;
+}
+
+
+/*    Fractions   */
+.frac {
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  letter-spacing: 0.001em;
+  text-align: center;
+}
+.frac > span {
+  display: block;
+  color: white;
+  font-size: 14pt;
+  padding: 0.1em;
+}
+.frac span.bottom {
+  border-top: 2px solid white;
+}
+.frac span.symbol {
+  display: none;
+}
+
+/*########################*/
+/*#       Boutton        #*/
+/*########################*/
+
+/* Main menu */
 .button{
     border: 2px solid white;
     color: white;
@@ -51,18 +133,210 @@ td{
     width: 80%;
     transition-duration: 0.4s;
     background-color: transparent;
-  }
-  
-  
-  .button:hover {
-      background-color: white;
-      color: #1D7F56;
-      border: 2px solid white;
-  }
-
-  .selectedclasse{
-    color: white;
-    font-size: 24pt;
-    margin-top: 5px;
-    margin-bottom: 5px;
 }
+.button:hover {
+    background-color: white;
+    color: #1D7F56;
+    border: 2px solid white;
+}
+
+/* Menu */
+.backbutton{
+  border: 2px solid white;
+  color: #1D7F56;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  margin: 4px 2px;
+  width: auto;
+  transition-duration: 0.4s;
+  background-color: white;
+}
+.backbutton:hover {
+    background-color: transparent;
+    color: white;
+    border: 2px solid white;
+}
+
+/*########################*/
+/*#      COMBOBOX        #*/
+/*########################*/
+/*the container must be positioned relative:*/
+.custom-select {
+  position: relative;
+  font-family: Arial;
+  display: inline-block;
+  border-radius: 5px;
+}
+.custom-select select {
+  display: none; /*hide original SELECT element:*/
+}
+.select-selected {
+  background-color: white;
+  color: #1D7F56;
+  padding: 5px 20px 5px 5px;
+  border: 2px solid white;
+  border-color: white white rgb(255, 255, 255, 0.9) white;
+  cursor: pointer;
+  user-select: none;
+  transition-duration: 0.4s;
+  border-radius: 5px;
+  display: block;
+}
+.select-selected:hover {
+  background-color: #1D7F56;
+  color: white;
+}
+/*style the arrow inside the select element:*/
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: white transparent transparent transparent;
+}
+/*point the arrow upwards when the select box is open (active):*/
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent white transparent;
+  top: 7px;
+
+}
+/*style the items (options), including the selected item:*/
+.select-items div {
+  color: #1D7F56;
+  padding: 5px 5px 5px 5px;
+  border: 2px solid white;
+  border-color: white white rgb(255, 255, 255, 0.9) white;
+  background-color: white;
+  cursor: pointer;
+  user-select: none;
+  transition-duration: 0.4s;
+  border-radius: 5px;
+  display: block;
+}
+/*style items (options):*/
+.select-items {
+  position: absolute;
+  background-color: #1D7F56;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+/*hide the items when the select box is closed:*/
+.select-hide {
+  display: none;
+}
+.select-items div:hover, .same-as-selected {
+  background-color: transparent;
+  color: white;
+  border: 2px solid white;
+}
+
+
+/*########################*/
+/*#      SIDEPANEL       #*/
+/*########################*/
+.sidepanel  {
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(to right, #111, #222, #111);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+.sidepanel a {
+    padding: 8px 8px 8px 8px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+.sidepanel div {
+    padding: 8px 8px 8px 8px;
+    text-decoration: none;
+    font-size: 25px;
+    display: block;
+    transition: 0.3s;
+    overflow: hidden;
+    text-align: center;
+    max-height: 500px;
+}
+.openbtninside {
+    font-size: 25px;
+    cursor: pointer;
+    background-color: transparent;
+    color: white;
+    padding: 8px 8px 8px 8px;
+    transition: 0.5s;
+    border: none;
+    display: block;
+    text-align: center;
+    width: 100%;
+}
+.openbtninside:hover {
+    background-color:rgba(100, 100, 100, 0.3);;
+}
+#SidePanelField{
+    font-size: 25px;
+    cursor: pointer;
+    background-color: transparent;
+    color: white;
+    padding: 8px 8px 8px 8px;
+    border: none;
+    display: block;
+    text-align: center;
+    margin-bottom: -10px;
+}
+#SidePanelField0, #SidePanelField1, #SidePanelField2, #SidePanelField3 {
+    padding: 8px 8px 8px 8px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    margin-top: -10px;
+    
+    max-height: 0;
+    transition: max-height 0.25s;
+    overflow: hidden;
+}
+.sidepanel a:hover {
+    color: #f1f1f1;
+}
+.sidepanel .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+}
+.openbtn {
+    top: 0;
+    left: 0;
+    font-size: 20px;
+    position: fixed;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 15px;
+    transition: 0.5s;
+    border: none;
+    height: 100%;
+}
+.openbtn:hover {
+    background-color:#444;
+}
+
+ 
+
+
