--- a/index.css
+++ b/index.css
@@ -161,6 +161,27 @@ td{
     border: 2px solid white;
 }
 
+/* Menu */
+.numberbutton{
+  border: 2px solid white;
+  color: #1D7F56;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  margin: 4px 2px;
+  width: 70px;
+  transition-duration: 0.4s;
+  background-color: white;
+}
+.numberbutton:hover {
+    background-color: transparent;
+    color: white;
+    border: 2px solid white;
+}
+
 /*########################*/
 /*#      COMBOBOX        #*/
 /*########################*/
