--- a/index.css
+++ b/index.css
@@ -161,6 +161,26 @@ td{
     border: 2px solid white;
 }
 
+.backbuttonred{
+  border: 2px solid #FF5555;
+  color: #1D7F56;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  margin: 4px 2px;
+  width: auto;
+  transition-duration: 0.4s;
+  background-color: #FF5555;
+}
+.backbuttonred:hover {
+    background-color: transparent;
+    color: #FF5555;
+    border: 2px solid #FF5555;
+}
+
 /* Menu */
 .numberbutton{
   border: 2px solid white;
