--- a/index.css
+++ b/index.css
@@ -31,9 +31,11 @@ h1, h2, h3, h4, h5, h6, p, ul, li, label, div, input,
 h1{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 0px;
+    width: 80%;
 }
 .soustitre{
     margin-top: 0px;
+    width: 80%;
 }
 .titredesclasses{
     font-size: 24pt;
