--- a/index.css
+++ b/index.css
@@ -32,17 +32,24 @@ h1{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 0px;
     width: 80%;
+    align-content: center;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 .soustitre{
     margin-top: 0px;
     width: 80%;
     text-align: center;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 .titredesclasses{
     font-size: 24pt;
     margin-top: 5px;
     margin-bottom: 5px;
+    text-align: center;
 }
 
 
