--- a/index.css
+++ b/index.css
@@ -137,6 +137,7 @@ td{
     padding: 5px 5px;
     text-align: center;
     text-decoration: none;
+    font-family: 'Times New Roman', Georgia, Times, serif;
     display: inline-block;
     font-size: 16px;
     border-radius: 5px;
